# execution-ucx

./: .bazelrc  .clang-format  .gitignore  BUILD.bazel  MODULE.bazel  README.md  README_Chinese.md  format.sh
axon/: BUILD.bazel
axon/build_defs/: core_libs.bzl  errors_libs.bzl  metrics_libs.bzl  storage_libs.bzl  tests.bzl  utils_libs.bzl
axon/include/axon/: axon_runtime.hpp  axon_worker.hpp  memory_policy.hpp  message_lifecycle_policy.hpp
axon/include/axon/errors/: error_types.hpp
axon/include/axon/metrics/: metrics_observer.hpp
axon/include/axon/storage/: async_io.hpp  avro_schema.hpp  avro_serialization.hpp  avro_unifex_io.hpp  axon_storage.hpp  unifex_io.hpp
axon/include/axon/utils/: axon_message.hpp  hash.hpp  ring_buffer.hpp  slot_map.hpp  tensor.hpp
axon/python/: .gitignore  BUILD.bazel  async_bridge.hpp  axon.py  axon_python.cpp  bindings_enums.cpp  bindings_enums.hpp  bindings_runtime.cpp  bindings_runtime.hpp  bindings_runtime_helpers.cpp  bindings_runtime_helpers.hpp  bindings_runtime_wrapper.cpp  bindings_runtime_wrapper.hpp  bindings_types.cpp  dlpack_helpers.cpp  memory_policy_helpers.cpp  memory_policy_helpers.hpp  param_conversion.cpp  param_conversion.hpp  pyproject.toml  python_helpers.cpp  python_module.cpp  python_module.hpp  python_wake_manager.cpp  requirements.txt  setup.py  tests.bzl  wheel.bzl
axon/python/axon/: __init__.py  device.py
axon/python/examples/: jax_cuda_example.py  jax_example.py  pytorch_cuda_example.py  pytorch_example.py
axon/python/src/: async_bridge.hpp  axon_python.cpp  bindings_enums.cpp  bindings_memory_resource.cpp  bindings_memory_resource.hpp  bindings_runtime.cpp  bindings_runtime_helpers.cpp  bindings_runtime_helpers.hpp  bindings_runtime_wrapper.cpp  bindings_runtime_wrapper.hpp  bindings_types.cpp  bindings_types.hpp  dlpack_helpers.cpp  dlpack_helpers.hpp  memory_policy_helpers.cpp  param_conversion.cpp  param_conversion.hpp  python_helpers.cpp  python_helpers.hpp  python_module.cpp  python_wake_manager.cpp  python_wake_manager.hpp
axon/python/tests/: __init__.py  benchmark_active_message.py  conftest.py  requirements.txt  run_test.sh  test_axon_runtime.py  test_basic.py  test_connection.py  test_device_api.py  test_edge_cases.py  test_integration.py  test_invoke_args.py  test_invoke_by_name.py  test_invoke_memory_policy.py  test_invoke_rpc.py  test_numpy_rpc.py  test_register_function.py  test_server_memory_policy.py  test_signature_based_rpc.py  test_simplified_register.py  test_types_enums.py  test_utils.py
axon/src/: axon_runtime.cpp  axon_worker.cpp
axon/src/errors/: error_types.cpp
axon/src/storage/: async_io.cpp  avro_schema.cpp  avro_serialization.cpp  avro_unifex_io.cpp  axon_storage.cpp  unifex_io.cpp
axon/src/utils/: axon_message.cpp  hash.cpp
axon/tests/: async_io_test.cpp  avro_serialization_test.cpp  axon_serialization_test.cpp  axon_storage_test.cpp  axon_worker_basic_test.cpp  axon_worker_test.cpp  message_lifecycle_policy_test.cpp  process_stored_requests_test.cpp  unifex_io_test.cpp
build_deps/bazel_rules/: BUILD.bazel  cc_export.bzl  copy_to_directory.bzl  exclude_from_filegroup.bzl  extract_from_filegroup.bzl
build_deps/bazelrc/: cc.bazelrc  cuda.bazelrc  profiles.bazelrc  python.bazelrc
rpc_core/: BUILD.bazel  async_rpc_dispatcher.hpp  async_rpc_dispatcher_test.cpp  rpc_causality_test.cpp  rpc_dispatcher.hpp  rpc_dispatcher_test.cpp  rpc_facade_helpers.hpp  rpc_payload_types.hpp  rpc_request_builder.hpp  rpc_request_builder_test.cpp  rpc_response_builder.hpp  rpc_response_builder_test.cpp  rpc_status.hpp  rpc_temporal_metadata_test.cpp  rpc_traits.hpp  rpc_types.hpp
rpc_core/utils/: cista_serialize_helper.hpp  hybrid_logical_clock.hpp  hybrid_logical_clock_test.cpp  tensor_meta.hpp
scripts/: build_python_wheels.sh  build_wheel.sh  dev_setup.sh  env_setup.sh  format.sh  run_python_tests.sh
test_code/: BUILD.bazel  readme.cpp  stop_when.cpp  test_cuda_connection.cpp
test_cuda/: BUILD.bazel  test_rule.bzl
ucx_context/: BUILD.bazel  format.sh  lock_free_queue.hpp  ucx_connection.cpp  ucx_connection.hpp  ucx_connection_manager.cpp  ucx_connection_manager.hpp  ucx_context_concept.hpp  ucx_context_data.hpp  ucx_context_data_test.cpp  ucx_context_def.h  ucx_context_logger.hpp  ucx_device_context.hpp  ucx_memory_resource.cpp  ucx_memory_resource.hpp  ucx_status.hpp
ucx_context/cuda/: ucx_cuda_context.hpp  ucx_cuda_macro.h  ucx_cuda_memory_manager.cuh  ucx_cuda_memory_manager.hpp
ucx_context/ucx_am_context/: ucx_am_connection_test.cpp  ucx_am_context.cpp  ucx_am_context.hpp  ucx_am_context_perf.cpp  ucx_am_context_test.cpp  ucx_am_context_test_cuda_helper.cu  ucx_am_context_test_helper.h  ucx_am_context_test_host_helper.cpp
