load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "rpc_utils",
    srcs = [
        "utils/cista_serialize_helper.hpp",
        "utils/hybrid_logical_clock.hpp",
        "utils/tensor_meta.hpp",
    ],
)

filegroup(
    name = "rpc_dispatcher_header",
    srcs = [
        "rpc_dispatcher.hpp",
    ],
)

filegroup(
    name = "async_rpc_dispatcher_header",
    srcs = [
        "async_rpc_dispatcher.hpp",
    ],
)

filegroup(
    name = "rpc_basic_headers",
    srcs = [
        "rpc_payload_types.hpp",
        "rpc_request_builder.hpp",
        "rpc_response_builder.hpp",
        "rpc_status.hpp",
        "rpc_traits.hpp",
        "rpc_types.hpp",
    ],
)

filegroup(
    name = "rpc_headers",
    srcs = [
        ":rpc_basic_headers",
        ":rpc_dispatcher_header",
    ],
)

filegroup(
    name = "async_rpc_headers",
    srcs = [
        ":async_rpc_dispatcher_header",
        ":rpc_basic_headers",
        ":rpc_dispatcher_header",
    ],
)

config_setting(
    name = "rpc_enable_natural_call",
    values = {"define": "rpc_enable_natural_call=true"},
)

cc_library(
    name = "rpc_status_lib",
    hdrs = [
        "rpc_status.hpp",
    ],
    copts = ["-std=c++20"],
    deps = [
        "@cista",
    ],
)

cc_library(
    name = "rpc_types_lib",
    hdrs = [
        "rpc_types.hpp",
    ],
    copts = ["-std=c++20"],
    deps = [
        ":hybrid_logical_clock_lib",
        ":rpc_status_lib",
    ],
)

cc_library(
    name = "cista_serialize_helper_lib",
    hdrs = [
        "utils/cista_serialize_helper.hpp",
    ],
    copts = ["-std=c++20"],
    deps = [
        "@cista",
    ],
)

cc_library(
    name = "hybrid_logical_clock_lib",
    hdrs = [
        "utils/hybrid_logical_clock.hpp",
    ],
    copts = ["-std=c++20"],
    deps = [
        "@cista",
    ],
)

cc_library(
    name = "tensor_meta_lib",
    hdrs = [
        "utils/tensor_meta.hpp",
    ],
    copts = ["-std=c++20"],
    deps = [
        "@cista",
        "@dlpack",
    ],
)

cc_library(
    name = "rpc_basic_header_lib",
    hdrs = [
        ":rpc_basic_headers",
    ],
    copts = ["-std=c++20"],
    deps = [
        "@cista",
    ],
)

cc_library(
    name = "rpc_dispatcher_lib",
    hdrs = [
        "rpc_facade_helpers.hpp",
        ":rpc_dispatcher_header",
    ],
    copts = ["-std=c++20"],
    deps = [
        ":cista_serialize_helper_lib",
        ":rpc_basic_header_lib",
        "@proxy",
    ],
)

cc_library(
    name = "async_rpc_dispatcher_lib",
    hdrs = [
        ":async_rpc_dispatcher_header",
    ],
    copts = ["-std=c++20"],
    deps = [
        ":rpc_dispatcher_lib",
        "@proxy",
        "@unifex",
    ],
)

cc_library(
    name = "rpc_headers_lib",
    hdrs = [
        ":rpc_headers",
    ],
    copts = ["-std=c++20"],
    defines = select({
        ":rpc_enable_natural_call": ["EUX_RPC_ENABLE_NATURAL_CALL"],
        "//conditions:default": [],
    }),
    deps = [
        ":hybrid_logical_clock_lib",
        ":rpc_dispatcher_lib",
        ":tensor_meta_lib",
        "@cista",
        "@execution-ucx//ucx_context:ucx_context_data_lib",
        "@proxy",
    ],
)

cc_library(
    name = "async_rpc_headers_lib",
    hdrs = [
        ":async_rpc_headers",
    ],
    copts = ["-std=c++20"],
    deps = [
        ":async_rpc_dispatcher_lib",
        ":hybrid_logical_clock_lib",
        ":tensor_meta_lib",
        "@cista",
        "@execution-ucx//ucx_context:ucx_context_data_lib",
        "@proxy",
        "@unifex",
    ],
)

cc_test(
    name = "hybrid_logical_clock_test",
    size = "small",
    srcs = ["utils/hybrid_logical_clock_test.cpp"],
    copts = ["-std=c++20"],
    deps = [
        ":hybrid_logical_clock_lib",
        "@cista",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "rpc_dispatcher_test",
    size = "small",
    srcs = ["rpc_dispatcher_test.cpp"],
    copts = ["-std=c++20"],
    defines = select({
        ":rpc_enable_natural_call": ["EUX_RPC_ENABLE_NATURAL_CALL"],
        "//conditions:default": ["EUX_RPC_ENABLE_NATURAL_CALL"],
    }),
    deps = [
        ":rpc_headers_lib",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "async_rpc_dispatcher_test",
    size = "small",
    srcs = ["async_rpc_dispatcher_test.cpp"],
    copts = ["-std=c++20"],
    deps = [
        ":async_rpc_headers_lib",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "rpc_request_builder_test",
    size = "small",
    srcs = ["rpc_request_builder_test.cpp"],
    copts = ["-std=c++20"],
    deps = [
        ":rpc_headers_lib",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "rpc_response_builder_test",
    size = "small",
    srcs = ["rpc_response_builder_test.cpp"],
    copts = ["-std=c++20"],
    deps = [
        ":rpc_headers_lib",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "rpc_causality_test",
    size = "small",
    srcs = ["rpc_causality_test.cpp"],
    copts = ["-std=c++20"],
    deps = [
        ":hybrid_logical_clock_lib",
        ":rpc_headers_lib",
        "@cista",
        "@googletest//:gtest_main",
    ],
)
